hume-editor/src/editor/tests/snapshots/hume_editor__editor__tests__lsp_virtual_lines__per_segment_scopes_style_the_virtual_lines_text.snap
---
source: hume-editor/src/editor/tests/lsp_virtual_lines.rs
expression: snap
---
<fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>1 </><fg=#ebdbb2,bg=#3c3836>let x = 5</>
<fg=#665c54,bg=#282828>    </><fg=#fb4934,bg=#282828>let</><fg=#928374,bg=#282828> </><fg=#b8bb26,bg=#282828>x</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>    1:10 *scratch* [+]            </><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
