hume-editor/src/editor/tests/snapshots/hume_editor__editor__tests__lsp_virtual_lines__scroll_over_a_virtual_line_pushes_the_next_line_down_correctly.snap
---
source: hume-editor/src/editor/tests/lsp_virtual_lines.rs
expression: snap
---
<fg=#665c54,bg=#282828>  1 </><fg=#ebdbb2,bg=#282828>aaa</>
<fg=#665c54,bg=#282828>    </><fg=#928374,bg=#282828>hint</>
<fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>2 </><fg=#ebdbb2,bg=#3c3836>bb</><fg=#3c3836,bg=#bdae93>b</>
<fg=#665c54,bg=#282828>  1 </><fg=#ebdbb2,bg=#282828>ccc</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>     2:3 *scratch* [+]            </><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
