hume-editor/src/editor/tests/snapshots/hume_editor__editor__tests__lsp_virtual_lines__virtual_line_renders_after_its_anchor_line.snap
---
source: hume-editor/src/editor/tests/lsp_virtual_lines.rs
expression: snap
---
<fg=#665c54,bg=#282828>  1 </><fg=#ebdbb2,bg=#282828>let x = 5</>
<fg=#665c54,bg=#282828>    </><fg=#fabd2f,bg=#282828,underline>^ unused variable</>
<fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>2 </><fg=#ebdbb2,bg=#3c3836>let y = 10</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>    2:11 *scratch* [+]            </><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
